# ShowyEdge

./: .editorconfig  .gitignore  .gitmodules  .hgignore  .markdownlint.json  .travis.yml  AppDelegate.h  AppDelegate.m  DrasticInputSourceStatus-Info.plist  DrasticInputSourceStatusAppDelegate.h  DrasticInputSourceStatusAppDelegate.m  DrasticInputSourceStatus_Prefix.pch  LanguageColorTableViewController.h  LanguageColorTableViewController.m  Makefile  MenuBarOverlayView.h  MenuBarOverlayView.m  NEWS.md  Podfile  README.md  ShowyEdge-Info.plist  ShowyEdge_Prefix.pch  main.m  make-package.sh  version
.github/: FUNDING.yml
.github/workflows/: ci.yml
Classes/: LanguageColorTableViewController.h  LanguageColorTableViewController.m  MenuBarOverlayView.h  MenuBarOverlayView.m  NotificationKeys.h  PreferencesController.h  PreferencesController.m  PreferencesKeys.h  PreferencesManager.h  PreferencesManager.m  ServerController.m  ServerObjects.h  StartAtLoginController.h  StartAtLoginController.m  WorkSpaceData.h  WorkSpaceData.m
Classes/Preferences/: ColorsCellView.h  ColorsCellView.m  ColorsTableViewDataSource.m  ColorsTableViewDelegate.h  ColorsTableViewDelegate.m  LanguageColorTableViewController.h  LanguageColorTableViewController.m  PreferencesWindowController.m
DrasticInputSourceStatus.xcodeproj/: project.pbxproj
DrasticInputSourceStatus.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
English.lproj/: MainMenu.xib
Resources/: DrasticInputSourceStatus.icns  DrasticInputSourceStatus_pub.pem  PreferencesWindow.xib
ShowyEdge.xcodeproj/: project.pbxproj
ShowyEdge.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ShowyEdge.xcodeproj/project.xcworkspace/xcshareddata/: ShowyEdge.xccheckout
ShowyEdge.xcodeproj/xcshareddata/xcschemes/: ShowyEdge.xcscheme
ShowyEdge.xcworkspace/xcshareddata/: ShowyEdge.xccheckout
files/Resources/: ShowyEdge.xcf
files/ScreenShots/: menubar.xcf
files/extra/: codesign.sh
files/icons/: Template_Ai_ShowyEdgeCS6.ai
scripts/: clean-launch-services-database.swift  codesign.sh  get-codesign-identity.sh  notarize-app.sh  update-version.py  update_version.py
src/: .gitignore  Makefile  common.cmake  project-base.yml  project-with-codesign.yml  run-xcodegen.sh
src/Helper/: Helper.entitlements  Helper.swift  HelperProtocol.swift  Info.plist  main.swift
src/Launcher/: AppDelegate.swift  Info.plist.in  main.swift
src/ShowyEdge/: Info.plist.in  MainMenu.xib  ShowyEdge.entitlements  ShowyEdge.provisionprofile  app.icns  embedded.provisionprofile
src/preferences/: AppDelegate.m  CMakeLists.txt  Info.plist.in  Info.plist.tmpl  Makefile
src/preferences/Classes/: ColorsCellView.h  ColorsCellView.m  ColorsTableViewDataSource.h  ColorsTableViewDataSource.m  ColorsTableViewDelegate.m  NotificationKeys.h  PreferencesWindowController.m
src/preferences/English.lproj/: MainMenu.xib
src/preferences/PreferencesWindow.xcodeproj/: project.pbxproj
src/preferences/Resources/: Info.plist.in  MainMenu.xib  app.icns
src/preferences/objc/: AppDelegate.m  ColorsCellView.h
src/preferences/src/: ColorsCellView.m  ColorsTableViewDataSource.h  ColorsTableViewDelegate.h  PreferencesWindowController.h  PreferencesWindowController.m
src/server/: AppDelegate.m  CMakeLists.txt  Info.plist.tmpl  Makefile  Podfile
src/server/Classes/: MenuBarOverlayView.h  PreferencesKeys.h  PreferencesManager.h  PreferencesManager.m  ServerController.h  ServerController.m  ServerForUserspace.m  ServerObjects.h  Updater.m  WorkSpaceData.m
src/server/Classes/Preferences/: ColorsTableViewDataSource.m  ColorsTableViewDelegate.m  PreferencesModel.m  PreferencesWindowController.m
src/server/English.lproj/: MainMenu.xib
src/server/Resources/: Info.plist.in  PreferencesWindow.xib
src/server/ShowyEdge.xcodeproj/: project.pbxproj
src/server/ShowyEdge.xcworkspace/: contents.xcworkspacedata
src/server/objc/: AppDelegate.m  ColorUtilities.h  ColorsTableViewDataSource.m  ColorsTableViewDelegate.m  NotificationKeys.h  PreferencesManager.m  PreferencesWindowController.m  ServerController.h  SharedKeys.h  Updater.m  WorkSpaceData.h  WorkSpaceData.m
src/server/src/: AppDelegate.m  MenuBarOverlayView.m  NotificationKeys.h  PreferencesKeys.h  PreferencesManager.h  PreferencesManager.m  ServerController.m  ServerForUserspace.h  Updater.h  Updater.m  WorkSpaceData.h  WorkSpaceData.m
src/share/: ColorUtilities.h  ColorUtilities.m  PreferencesClient.h  PreferencesModel.h  PreferencesModel.m  Relauncher.h  ServerClient.m  ServerClientProtocol.h  SharedKeys.h  weakify.h
tools/clean-launch-services-database/: Package.swift
util/lint/: lint.sh  xcodeproj.rb
(+85 files in other folders)
